brain/sources/prod-metadata/objects/Education_History__c/Education_History__c.object-meta.xml
<CustomObject>
    <label>Education History</label>
    <nameField>
        <displayFormat>EDU-{0000}</displayFormat>
        <label>Education History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Education Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>