brain/sources/prod-metadata/objects/Education_History__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Education Histories</relationshipLabel>
    <relationshipName>Education_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>