brain/sources/prod-metadata/objects/Education_History__c/fields/CGPA_Score__c.field-meta.xml
<CustomField>
    <fullName>CGPA_Score__c</fullName>
    <label>CGPA / Score</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>