brain/sources/prod-metadata/objects/Education_History__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Education Histories</relationshipLabel>
    <relationshipName>Education_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>