brain/sources/prod-metadata/objects/Education_History__c/fields/Degree__c.field-meta.xml
<CustomField>
    <fullName>Degree__c</fullName>
    <label>Degree</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Degree</valueSetName>
    </valueSet>
</CustomField>