brain/sources/prod-metadata/objects/Education_History__c/fields/Degree_Type__c.field-meta.xml
<CustomField>
    <fullName>Degree_Type__c</fullName>
    <label>Degree Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Degree_Type</valueSetName>
    </valueSet>
</CustomField>