brain/sources/prod-metadata/objects/Education_History__c/fields/Institute__c.field-meta.xml
<CustomField>
    <fullName>Institute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Institute</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Institute__c.Country__c</field>
            <operation>equals</operation>
            <valueField>$Source.Institute_Country__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Institute__c</referenceTo>
    <relationshipLabel>Education Histories</relationshipLabel>
    <relationshipName>Education_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>