brain/sources/prod-metadata/objects/Education_History__c/fields/Institute_Country__c.field-meta.xml
<CustomField>
    <fullName>Institute_Country__c</fullName>
    <label>Institute Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>