brain/sources/prod-metadata/objects/Education_History__c/fields/Institute_Name__c.field-meta.xml
<CustomField>
    <fullName>Institute_Name__c</fullName>
    <formula>IF(
    ISBLANK(Institute__c),
    &quot;&quot;,
    Institute__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Institute Name</label>
    <type>Text</type>
</CustomField>