brain/sources/prod-metadata/objects/Education_History__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Education Histories</relationshipLabel>
    <relationshipName>Education_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>